token count overflow fixed

--- a/src/column.css
+++ b/src/column.css
@@ -270,7 +270,7 @@ ul>li>svg{
 
 .count-tokens,.net-value-column{
   margin-left: 2px;
-  width:120px;
+  min-width:120px;
   display: flex;
   justify-content: space-around;
   margin-bottom: 10px;
